--- a/package.json
+++ b/package.json
@@ -1,9 +1,144 @@
 {
+  "name": "employeetracker",
+  "version": "1.0.0",
+  "description": "Developers are often tasked with creating interfaces that make it easy for non-developers to view and interact with information stored in databases. Often these interfaces are known as **C**ontent **M**anagement **S**ystems. In this homework assignment, your challenge is to architect and build a solution for managing a company's employees using node, inquirer, and MySQL.",
+  "main": "index.js",
   "dependencies": {
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "any-promise": "^1.3.0",
+    "ansi-styles": "^4.3.0",
+    "base64-js": "^1.5.1",
+    "available-typed-arrays": "^1.0.5",
+    "chalk": "^4.1.2",
+    "bl": "^4.1.0",
+    "call-bind": "^1.0.2",
+    "chardet": "^0.7.0",
+    "buffer": "^5.7.1",
+    "cli-spinners": "^2.6.1",
+    "cli-cursor": "^3.1.0",
+    "color-convert": "^2.0.1",
+    "cli-width": "^3.0.0",
+    "clone": "^1.0.4",
+    "color-name": "^1.1.4",
     "console.table": "^0.10.0",
+    "daemon": "^1.1.0",
+    "debug": "^4.3.3",
+    "define-properties": "^1.1.3",
+    "denque": "^2.0.1",
+    "dottie": "^2.0.2",
+    "easy-table": "^1.1.0",
+    "emoji-regex": "^8.0.0",
+    "defaults": "^1.0.3",
+    "es-abstract": "^1.19.1",
+    "escape-string-regexp": "^1.0.5",
+    "es-to-primitive": "^1.2.1",
+    "external-editor": "^3.1.0",
+    "function-bind": "^1.1.1",
+    "generate-function": "^2.3.1",
+    "figures": "^3.2.0",
+    "foreach": "^2.0.5",
+    "get-intrinsic": "^1.1.1",
+    "get-symbol-description": "^1.0.0",
+    "has-bigints": "^1.0.1",
+    "has-flag": "^4.0.0",
+    "has-symbols": "^1.0.2",
+    "has-tostringtag": "^1.0.0",
+    "has": "^1.0.3",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "inherits": "^2.0.4",
+    "inflection": "^1.13.1",
     "init": "^0.1.2",
+    "internal-slot": "^1.0.3",
     "inquirer": "^8.2.0",
+    "is-bigint": "^1.0.4",
+    "is-arguments": "^1.1.1",
+    "is-boolean-object": "^1.1.2",
+    "is-date-object": "^1.0.5",
+    "is-callable": "^1.2.4",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-function": "^1.0.10",
+    "is-interactive": "^1.0.0",
+    "is-number-object": "^1.0.6",
+    "is-property": "^1.0.2",
+    "is-negative-zero": "^2.0.2",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.1",
+    "is-typed-array": "^1.1.8",
+    "is-symbol": "^1.0.4",
+    "is-string": "^1.0.7",
+    "is-unicode-supported": "^0.1.0",
+    "is-weakref": "^1.0.2",
+    "log-symbols": "^4.1.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^6.0.0",
+    "long": "^4.0.0",
+    "moment-timezone": "^0.5.34",
+    "mimic-fn": "^2.1.0",
+    "ms": "^2.1.2",
+    "moment": "^2.29.1",
+    "mute-stream": "^0.0.8",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.0"
-  }
+    "named-placeholders": "^1.1.2",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.2",
+    "object-inspect": "^1.12.0",
+    "os-tmpdir": "^1.0.2",
+    "ora": "^5.4.1",
+    "onetime": "^5.1.2",
+    "pg-connection-string": "^2.5.0",
+    "pseudomap": "^1.0.2",
+    "retry-as-promised": "^4.0.0",
+    "readable-stream": "^3.6.0",
+    "restore-cursor": "^3.1.0",
+    "run-async": "^2.4.1",
+    "rxjs": "^7.4.0",
+    "semver": "^7.3.5",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "seq-queue": "^0.0.5",
+    "sequelize": "^6.12.0",
+    "sequelize-pool": "^7.1.0",
+    "signal-exit": "^3.0.6",
+    "side-channel": "^1.0.4",
+    "sqlstring": "^2.3.2",
+    "string.prototype.trimstart": "^1.0.4",
+    "string-width": "^4.2.3",
+    "string.prototype.trimend": "^1.0.4",
+    "strip-ansi": "^6.0.1",
+    "string_decoder": "^1.3.0",
+    "tmp": "^0.0.33",
+    "supports-color": "^7.2.0",
+    "through": "^2.3.8",
+    "toposort-class": "^1.0.1",
+    "tslib": "^2.1.0",
+    "type-fest": "^0.21.3",
+    "util": "^0.12.4",
+    "unbox-primitive": "^1.0.1",
+    "which-boxed-primitive": "^1.0.2",
+    "util-deprecate": "^1.0.2",
+    "uuid": "^8.3.2",
+    "wcwidth": "^1.0.1",
+    "validator": "^13.7.0",
+    "which-typed-array": "^1.1.7",
+    "wkx": "^0.5.0",
+    "yallist": "^4.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/g-broadhead/employeeTracker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/g-broadhead/employeeTracker/issues"
+  },
+  "homepage": "https://github.com/g-broadhead/employeeTracker#readme"
 }
